deletion of operators and consultants

--- a/views/admin/partials/adminTop.ejs
+++ b/views/admin/partials/adminTop.ejs
@@ -107,7 +107,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/admin/create/user">Korisnik</a>
-                                <a class="dropdown-item" href="/admin/create/sity">Grad</a>
+                                <a class="dropdown-item" href="/admin/create/city">Grad</a>
                                 <a class="dropdown-item" href="/admin/create/product">Proizvod</a>
                                 
                             </div>
