--- a/views/admin/partials/adminButtom.ejs
+++ b/views/admin/partials/adminButtom.ejs
@@ -24,6 +24,7 @@
 <script src="assets/libs/flot/jquery.flot.crosshair.js"></script>
 <script src="assets/libs/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
 <script src="dist/js/pages/chart/chart-page-init.js"></script>
+<script src="js/customFunction.js"></script>
 </body>
 
 </html>
