--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -148,7 +148,8 @@
                                                 <span class="text-muted float-right">May 10, 2016</span>
                                                 <button type="button" class="btn btn-cyan btn-sm">Edit</button>
                                                 <button type="button" class="btn btn-success btn-sm">Publish</button>
-                                                <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                                                <button type="button" class="btn btn-danger btn-sm deleteProductBtn"
+                                                 data-id="<%=el._id%>"">Delete</button>
                                             </div>
                                         </div>
                                     </div>
